--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "main": "public/electron.ts",
   "devDependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.8",
+    "@chakra-ui/theme-tools": "^1.2.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +24,9 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.0",
+    "framer-motion": "^4.1.17",
+    "i": "^0.3.7",
+    "npm": "^7.24.1",
     "npm-check-updates": "^11.8.5",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
